@@ -7,7 +7,7 @@ title: Metabase CLI
 Metabase ships with some handy CLI commands. To view a list of commands, run the Metabase jar followed by `help`.
 
 ```
-java -jar metabase.jar help
+java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar help
 ```
 
 Metabase will print out the help text for available commands.
