@@ -36,7 +36,7 @@ If you're running the JVM Jar file directly:
 5. Restart the server:
 
    ```
-   java -jar metabase.jar
+   java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar
    ```
 
 On startup, Metabase will perform any tasks it needs to complete the upgrade. Once Metabase has completed those tasks, you'll be running the new version.
@@ -153,7 +153,7 @@ export MB_DB_PORT=5432
 export MB_DB_USER=username
 export MB_DB_PASS=password
 export MB_DB_HOST=localhost
-java -jar metabase.jar migrate down
+java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar migrate down
 ```
 
 If you're running Docker, use the command `"migrate down"` (with the quotes around `"migrate down"`), and include the connection details for your application database, for example:
