@@ -5,7 +5,6 @@
    [environ.core :as env]
    [java-time.api :as t]
    [metabase.analytics.prometheus :as prometheus]
-   [metabase.channel.core :as channel]
    [metabase.config :as config]
    [metabase.core.config-from-file :as config-from-file]
    [metabase.core.initialization-status :as init-status]
@@ -17,7 +16,9 @@
    [metabase.events :as events]
    [metabase.logger :as logger]
    [metabase.models.cloud-migration :as cloud-migration]
+   [metabase.models.database :as database]
    [metabase.models.setting :as settings]
+   [metabase.notification.core :as notification]
    [metabase.plugins :as plugins]
    [metabase.plugins.classloader :as classloader]
    [metabase.public-settings :as public-settings]
@@ -124,27 +125,27 @@
   (when (cloud-migration/read-only-mode)
     (cloud-migration/read-only-mode! false))
 
-  (init-status/set-progress! 0.5)
+  (init-status/set-progress! 0.4)
   ;; Set up Prometheus
   (log/info "Setting up prometheus metrics")
   (prometheus/setup!)
-  (init-status/set-progress! 0.6)
+  (init-status/set-progress! 0.5)
 
   (premium-features/airgap-check-user-count)
-  (init-status/set-progress! 0.65)
+  (init-status/set-progress! 0.55)
   ;; run a very quick check to see if we are doing a first time installation
   ;; the test we are using is if there is at least 1 User in the database
   (let [new-install? (not (setup/has-user-setup))]
     ;; initialize Metabase from an `config.yml` file if present (Enterprise Edition™ only)
     (config-from-file/init-from-file-if-code-available!)
-    (init-status/set-progress! 0.7)
+    (init-status/set-progress! 0.6)
     (when new-install?
       (log/info "Looks like this is a new installation ... preparing setup wizard")
       ;; create setup token
       (create-setup-token-and-log-setup-url!)
       ;; publish install event
       (events/publish-event! :event/install {}))
-    (init-status/set-progress! 0.8)
+    (init-status/set-progress! 0.7)
     ;; deal with our sample database as needed
     (when (config/load-sample-content?)
       (if new-install?
@@ -152,19 +153,20 @@
         (sample-data/extract-and-sync-sample-database!)
         ;; otherwise update if appropriate
         (sample-data/update-sample-database-if-needed!)))
-    (init-status/set-progress! 0.9))
+    (init-status/set-progress! 0.8))
 
   (ensure-audit-db-installed!)
-  (init-status/set-progress! 0.95)
+  (notification/truncate-then-seed-notification!)
+  (init-status/set-progress! 0.9)
 
   (embed.settings/check-and-sync-settings-on-startup! env/env)
-  (init-status/set-progress! 0.97)
+  (init-status/set-progress! 0.95)
 
   (settings/migrate-encrypted-settings!)
-  ;; start scheduler at end of init!
+   ;; start scheduler at end of init!
   (task/start-scheduler!)
-  ;; load the channels
-  (channel/find-and-load-metabase-channels!)
+   ;; In case we could not do this earlier (e.g. for DBs added via config file), because the scheduler was not up yet:
+  (database/check-and-schedule-tasks!)
   (init-status/set-complete!)
   (let [start-time (.getStartTime (ManagementFactory/getRuntimeMXBean))
         duration   (- (System/currentTimeMillis) start-time)]
@@ -219,5 +221,8 @@
   [& [cmd & args]]
   (maybe-enable-tracing)
   (if cmd
-    (run-cmd cmd init! args) ; run a command like `java -jar metabase.jar migrate release-locks` or `clojure -M:run migrate release-locks`
-    (start-normally))) ; with no command line args just start Metabase normally
+    ;; run a command like `java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar migrate release-locks` or
+    ;; `clojure -M:run migrate release-locks`
+    (run-cmd cmd init! args)
+    ;; with no command line args just start Metabase normally
+    (start-normally)))
